implementando mongodb, evento store, kafka e eventual sincronizacao

--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SqlServer": "Server=127.0.0.1,1433;Database=OrdersDb;User Id=sa;Password=Your_password123;TrustServerCertificate=True",
+    "MongoDb": "mongodb://127.0.0.1:27017",
+    "EventStore": "esdb://admin:changeit@127.0.0.1:2113?tls=false"
+  },
+  "Kafka": {
+    "Server": "localhost:9092"
   }
 }
