Criando os consumers separados

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,8 @@ services:
       EVENTSTORE_START_STANDARD_PROJECTIONS: "true"
       EVENTSTORE_HTTP_PORT: 2113
       EVENTSTORE_INSECURE: "true"
+      EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP: "true"
+      EVENTSTORE_ALLOW_ANONYMOUS_STREAM_ACCESS: "true"
     ports:
       - "2113:2113"
       - "1113:1113"
