--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -6,11 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServer": "Server=127.0.0.1,1433;Database=OrdersDb;User Id=sa;Password=Your_password123;TrustServerCertificate=True",
-    "MongoDb": "mongodb://127.0.0.1:27017",
-    "EventStore": "esdb://admin:changeit@127.0.0.1:2113?tls=false"
+    "SqlServer": "Server=localhost,1433;Database=OrdersDb;User Id=sa;Password=Your_password123;TrustServerCertificate=True",
+    "MongoDb": "mongodb://localhost:27017",
+    "EventStore": "esdb://admin:changeit@localhost:2113?tls=false"
   },
   "Kafka": {
     "Server": "localhost:9092"
-  }
+  },
+  "SyncType": "kafka" //kafka (eventual) ou eventstore (event-sourcing)
 }
