--- a/src/Api/appsettings.Development.json
+++ b/src/Api/appsettings.Development.json
@@ -5,13 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "SqlServer": "Server=localhost,1433;Database=OrdersDb;User Id=sa;Password=Your_password123;TrustServerCertificate=True",
-    "MongoDb": "mongodb://localhost:27017",
-    "EventStore": "esdb://admin:changeit@localhost:2113?tls=false"
-  },
-  "Kafka": {
-    "Server": "localhost:9092"
-  },
-  "SyncType": "kafka" //kafka (eventual) ou eventstore (event-sourcing)
+  "SyncType": "eventstore", //kafka (eventual) ou eventstore (event-sourcing)
+  "Topics": [ "orders" ],
+  "Streams": [ "orders" ]
 }
