--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" />
     <PackageReference Include="EventStore.Client.Grpc.Streams" />
+	<PackageReference Include="EventStore.Client.Grpc.PersistentSubscriptions" />
     <PackageReference Include="MediatR" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
